# sessionizer

./: Cargo.toml  README.md  clippy.toml
.cargo/: config.toml
.github/workflows/: rust.yml
crates/sessionizer/: Cargo.toml  DOCS.md
crates/sessionizer/src/: config.rs  directories.rs  fzf.rs  main.rs  sessions.rs  shutdown.rs  tmux.rs
xtask/: Cargo.toml
