[package]
name = "sessionizer"
version = "0.1.0"
homepage = "https://github.com/cloudbridgeuy/sessionizer"
documentation = "https://github.com/cloudbridgeuy/sessionizer/crates/sessionizer/DOCS.md"
autobins = false

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "sessionizer"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive", "env"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serde_yaml = "0.9.34"
color-eyre = "0.6.3"
tokio = { version = "1.37.0", features = ["full"] }
env_logger = "0.11.3"
log = "0.4.21"
crossterm = "0.27.0"
walkdir = "2.5.0"
regex = "1.10.4"
uuid = { version = "1.8.0", features = ["v4"] }
ctrlc = { version = "3.4.4", features = ["termination"] }
